# projection_converter

./: .gitignore  CMakeLists.txt  README.md
config/: input.yaml  output.yaml
include/: csv.hpp  progress_bar.hpp
include/map_projector/: map_projector.hpp  mgrs_map_projector.hpp  tm_map_projector.hpp
include/projection_converter/: converter_from_llh.hpp  converter_to_llh.hpp  lat_lon_alt.hpp  progress_bar.hpp
src/: converter_from_llh.cpp  converter_to_llh.cpp  csv.cpp  lanelet_conversion.cpp  pcd_conversion.cpp  projection_converter.cpp  stoppoints_conversion.cpp
src/map_projector/: map_projector.cpp  mgrs_map_projector.cpp  tm_map_projector.cpp
test/: test_example.cpp  test_mgrs_map_projector.cpp  test_tm_map_projector.cpp
test_data/: input.yaml  lanelet2_map.osm  lanelet2_map_expected.osm  output.yaml  pointcloud_map.pcd  pointcloud_map_expected.pcd  stop_points.csv  stop_points_expected.csv
